--- a/SipsisAdmin/Shared/_LayoutPage.cshtml
+++ b/SipsisAdmin/Shared/_LayoutPage.cshtml
@@ -16,6 +16,7 @@
     <!-- Custom CSS -->
     <link href="~/Assets/dist/css/style.min.css" rel="stylesheet">
     <link href="~/Assets/assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.css" rel="stylesheet" />
+    <link href="~/Assets/assets/libs/toastr/build/toastr.min.css" rel="stylesheet" /> 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -233,10 +234,26 @@
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/h" aria-expanded="false"><i class="mdi mdi-home"></i><span class="hide-menu">Ana Sayfa</span></a></li>
 
                         <li class="sidebar-item">
+                            <a class="sidebar-link has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class=" fa fa-user"></i><span class="hide-menu">Müşteri İşlemleri </span></a>
+                            <ul aria-expanded="false" class="collapse  first-level">
+                                <li class="sidebar-item"><a href="/Customer/Index" class="sidebar-link"><i class="fa fa-list"></i><span class="hide-menu"> Müşteri Listesi </span></a></li>
+                                <li class="sidebar-item"><a href="/Customer/Insert" class="sidebar-link"><i class="fa fa-plus"></i><span class="hide-menu"> Müşteri Ekleme </span></a></li>
+                            </ul>
+                        </li>
+
+                        <li class="sidebar-item">
                             <a class="sidebar-link has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class=" fa fa-shopping-basket"></i><span class="hide-menu">Pazaryeri İşlemleri </span></a>
                             <ul aria-expanded="false" class="collapse  first-level">
-                                <li class="sidebar-item"><a href="form-basic.html" class="sidebar-link"><i class="fa fa-list"></i><span class="hide-menu"> Pazaryeri Listesi </span></a></li>
-                                <li class="sidebar-item"><a href="form-basic.html" class="sidebar-link"><i class="fa fa-plus"></i><span class="hide-menu"> Pazaryeri Ekleme </span></a></li>
+                                <li class="sidebar-item"><a href="/Market/Index" class="sidebar-link"><i class="fa fa-list"></i><span class="hide-menu"> Pazaryeri Listesi </span></a></li>
+                                <li class="sidebar-item"><a href="/Market/Insert" class="sidebar-link"><i class="fa fa-plus"></i><span class="hide-menu"> Pazaryeri Ekleme </span></a></li>
+                            </ul>
+                        </li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class=" fa fa-user"></i><span class="hide-menu">Kargo İşlemleri </span></a>
+                            <ul aria-expanded="false" class="collapse  first-level">
+                                <li class="sidebar-item"><a href="/Cargo/Index" class="sidebar-link"><i class="fa fa-list"></i><span class="hide-menu"> Kargo Listesi </span></a></li>
+                                <li class="sidebar-item"><a href="/Cargo/Insert" class="sidebar-link"><i class="fa fa-plus"></i><span class="hide-menu"> Kargo Ekleme </span></a></li>
                             </ul>
                         </li>
 
@@ -324,6 +341,9 @@
          ****************************************/
         $('#zero_config').DataTable();
     </script>
+    <script src="~/Assets/assets/libs/toastr/build/toastr.min.js"></script>
+    <script src="~/Assets/custom/3.1 Util.js"></script>
+    @RenderSection("JS",false)
 </body>
 
 </html>
