--- a/SipsisAdmin/Views/Market/Update.cshtml
+++ b/SipsisAdmin/Views/Market/Update.cshtml
@@ -11,6 +11,7 @@
             <div class="card-body">
                 <h4 class="card-title">Pazaryeri Güncelleme Ekranı</h4>
                 <div class="form-group row">
+                    <input type="text" name="ID" value="@Model.Id" hidden />
                     <label for="fname" class="control-label col-form-label">Pazaryeri Adı</label>
                     <div class="col-12">
                         <input type="text" name="MarketName" class="form-control" id="fname" placeholder="Lütfen Pazaryeri Adınızı Giriniz......" required value="@Model.MarketName">
