--- a/SipsisAdmin/Views/Cargo/Index.cshtml
+++ b/SipsisAdmin/Views/Cargo/Index.cshtml
@@ -1,22 +1,21 @@
 ﻿
 @{
-    ViewBag.Title = "Pazaryeri Listelesi";
+    ViewBag.Title = "Index";
     Layout = "~/Shared/_LayoutPage.cshtml";
 }
-
-@model List<SipsisDAL.Market>
+@model List<SipsisDAL.Cargo>
 <div class="row">
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Pazaryeri Listesi</h5>
+                <h5 class="card-title">Müşteri Listesi</h5>
                 <div class="table-responsive">
                     <table id="zero_config" class="table table-striped table-bordered">
                         <thead class="text-center">
                             <tr>
-                                <th>Pazaryeri Değeri</th>
-                                <th>Komisyon Değeri</th>
-                                <th>Kullanıcı Adı</th>
+                                <th>Kargo Logo</th>
+                                <th>Kargo Adı</th>
+                                <th>Ekleyen Kişi</th>
                                 <th>İşlemler</th>
                             </tr>
                         </thead>
@@ -24,11 +23,13 @@
                             @foreach (var item in Model)
                             {
                                 <tr class="text-center">
-                                    <td>@item.MarketName</td>
-                                    <td>@item.Commission</td>
+                                   <td>
+                                        <img src="@item.CargoImageURL" height="70" width="70" alt="Alternate Text" />
+                                   </td>
+                                    <td>@item.CargoName</td>
                                     <td>@item.user.UserName</td>
                                     <td>
-                                        <a href="/Market/Update/@item.Id" class="btn-warning text-light"><i class="fa fa-edit"></i>Güncelle</a>
+                                        <a href="/Cargo/Update/@item.Id" class="btn-warning text-light"><i class="fa fa-edit"></i>Güncelle</a>
                                     </td>
                                 </tr>
                             }
@@ -40,3 +41,4 @@
         </div>
     </div>
 </div>
+
