--- a/SipsisAdmin/Views/Customer/Index.cshtml
+++ b/SipsisAdmin/Views/Customer/Index.cshtml
@@ -1,22 +1,22 @@
 ﻿
 @{
-    ViewBag.Title = "Pazaryeri Listelesi";
+    ViewBag.Title = "Müşteri Liste";
     Layout = "~/Shared/_LayoutPage.cshtml";
 }
-
-@model List<SipsisDAL.Market>
+@model List<SipsisDAL.Customer>
 <div class="row">
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Pazaryeri Listesi</h5>
+                <h5 class="card-title">Müşteri Listesi</h5>
                 <div class="table-responsive">
                     <table id="zero_config" class="table table-striped table-bordered">
                         <thead class="text-center">
                             <tr>
-                                <th>Pazaryeri Değeri</th>
-                                <th>Komisyon Değeri</th>
-                                <th>Kullanıcı Adı</th>
+                                <th>Pazaryeri Adı</th>
+                                <th>Müşteri Adı - Soyadı</th>
+                                <th>Müşteri Telefon</th>
+                                <th>İşlemi Yapan</th>
                                 <th>İşlemler</th>
                             </tr>
                         </thead>
@@ -24,19 +24,21 @@
                             @foreach (var item in Model)
                             {
                                 <tr class="text-center">
-                                    <td>@item.MarketName</td>
-                                    <td>@item.Commission</td>
+                                    <td>@item.Market.MarketName</td>
+                                    <td>@item.CustomerName</td>
+                                    <td>@item.CustomerPhone</td>
                                     <td>@item.user.UserName</td>
                                     <td>
-                                        <a href="/Market/Update/@item.Id" class="btn-warning text-light"><i class="fa fa-edit"></i>Güncelle</a>
+                                        <a href="/Customer/Update/@item.Id" class="btn-warning text-light"><i class="fa fa-edit"></i>Güncelle</a>
                                     </td>
                                 </tr>
                             }
                         </tbody>
-                    </table>
+                    </table>    
                 </div>
 
             </div>
         </div>
     </div>
 </div>
+
